[package]
name = "heliocron"
version = "0.8.1"
authors = ["Michael Freeborn <michaelfreeborn1@gmail.com>"]
description = "A simple program for calculating sunrise, sunset and related times, which can be integrated with cron to trigger other programs to run when these events occur"
documentation = "https://github.com/mfreeborn/heliocron"
homepage = "https://github.com/mfreeborn/heliocron"
repository = "https://github.com/mfreeborn/heliocron"
keywords = ["cron", "crontab", "sunrise", "unix", "scheduler"]
categories = ["command-line-utilities", "date-and-time"]
readme = "README.md"
license = "Apache-2.0 OR MIT"
edition = "2021"
exclude = ["assets/"]

[lints.rust]
rust_2018_idioms = "deny"
unsafe_code = "forbid"
unused = "deny"
unused_crate_dependencies = "deny"
unused_import_braces = "deny"
unused_lifetimes = "deny"
unused_qualifications = "deny"
warnings = "deny"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
chrono = "0.4"

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3
